--- a/directory.html
+++ b/directory.html
@@ -8,4 +8,7 @@ title: "Professor Statistics"
   <p>Loading statistics...</p>
 </section>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="assets/js/statistics.js"></script>
+<link rel="stylesheet" href="assets/style/style.css">
+
