--- a/directory.html
+++ b/directory.html
@@ -9,6 +9,6 @@ title: "Professor Statistics"
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="assets/js/statistics.js"></script>
+<script src="assets/js/statistics.js?v=2"></script>
 <link rel="stylesheet" href="assets/style/style.css">
 
