--- a/reviews.html
+++ b/reviews.html
@@ -10,6 +10,6 @@ title: "Browse Reviews"
 
 <section id="stats"></section>
 <section id="reviews"></section>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="assets/js/reviews.js"></script>
 
